<resources>
    <string name="app_name">dzhang4-GameBuzzer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SingleMain">Single User</string>
    <string name="MultiMain">Gameshow Buzzer</string>
    <string name="StatsMain">Statistics</string>
    <string name="Welcome">Welcome to GameShow Buzzer!</string>
    <string name="SingleReac">Reaction Time</string>
    <string name="SingleClick">Click Here</string>
    <string name="title_activity_single_user">single_userActivity</string>
    <string name="title_activity_multi_player">multi_playerActivity</string>
    <string name="twoPlayer">2 Player</string>
    <string name="threePlayer">3 Player</string>
    <string name="fourPlayer">4 Player</string>
    <string name="Player12">Player 1</string>
    <string name="Player22">Player 2</string>
    <string name="MultiTitle">Choose number of players:</string>
    <string name="title_activity_stats">statsActivity</string>
    <string name="StatsTitle">Statistics</string>
    <string name="title_activity_two_player">two_playerActivity</string>
    <string name="title_activity_three_player">three_playerActivity</string>
    <string name="title_activity_four_player">four_playerActivity</string>
    <string name="title_activity_stat_list">stat_list</string>
    <string name="title_activity_email">email</string>
</resources>
