<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:id="@+id/Welcome"
            android:layout_weight="0.12"
            android:textSize="36dp" />

        <Button
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:text="@string/SingleMain"
            android:id="@+id/SinglePlayer"
            android:layout_weight="0.21"
            android:onClick="singlePlayerClick"/>

        <Button
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:text="@string/MultiMain"
            android:id="@+id/MultiPlayer"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.21"
            android:onClick="multiPlayerClick"/>

        <Button
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:text="@string/StatsMain"
            android:id="@+id/Stats"
            android:layout_weight="0.21"
            android:onClick="statsClick"/>
    </LinearLayout>


</RelativeLayout>
